Modernize sal-rest-docgen tests a bit
Add an abstract base class to reuse EffectiveModelContext and schema
service. Also use static imports and simplify assertions.

Change-Id: Ib1558ca32efbf5fe9862ff41c5214d090eeedd6c
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>